--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Luis Llamas
 sentence=AsyncTask Library
 paragraph=
 category=Other
-url=https://www.luisllamas.es
+url=https://github.com/luisllamasbinaburo/Arduino-AsyncTask
 architectures=*
