--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=AsyncTaskLib
 version=1.0.0
 author=Luis Llamas
 maintainer=Luis Llamas
-sentence=AsyncTask Library
-paragraph=
+sentence=Library that implements a non blockin task
+paragraph=Library that implements a non blockin task
 category=Other
 url=https://github.com/luisllamasbinaburo/Arduino-AsyncTask
 architectures=*
